# BigInt-Implement

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: app_bigint.cpp  fileio_bigInt.cpp  main.cpp  stdio_bigInt.cpp
include/: bigint.h  bigint.hpp
src/: bigint.cpp
src/arithmetic/: add.cpp  divide.cpp  multiply.cpp  subtract.cpp
src/assignment/: add.cpp
src/comparison/: equal.cpp
src/constructors/: constructor.cpp
src/functions/: conversion.cpp  utility.cpp
src/operators/: arithmetics.cpp  assignments.cpp  comparisons.cpp  unaries.cpp
src/operators/arithmetic/: add.cpp  divide.cpp  modular.cpp  multiply.cpp  subtract.cpp
src/operators/assignment/: add.cpp
src/operators/comparison/: equal.cpp
src/operators/io/: console_input.cpp  console_output.cpp
src/operators/unary/: minus.cpp  plus.cpp
test/: assignment_test.cc  comparison_test.cc  io_test.cc  main_test.cc  unary_test.cc  utility_test.cc
test/arithmetic_test/: add_test.cc  divide_test.cc  multiply_test.cc  subtract_test.cc
